--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gamehigame",
+  "name": "client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -31,14 +31,12 @@
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "framer-motion": "^12.5.0",
     "lightningcss": "^1.29.3",
     "lucide-react": "^0.482.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
